--- a/css/pretest2.css
+++ b/css/pretest2.css
@@ -1,6 +1,34 @@
 section {
     text-align: center;
-    height: 15px;
-    width: 10px;
+    margin: auto;
     border: deepskyblue thin;
+}
+.form{    
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    border-style: groove;
+}
+.form tr{
+    text-align: left;
+}
+
+table{
+    width: 100%;
+}
+
+table tr td{
+    width: 30%;
+}
+
+table tr td input{
+    width: 95%;
+}
+
+table tr td.submit{
+    text-align: right;
+}
+
+table tr td.reset{
+    text-align: left;
 }
